--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "@umijs/preset-react": "1.x",
+    "braft-editor": "^2.3.9",
     "lib-flexible": "^0.3.2",
     "rc-animate": "^3.1.1",
     "rc-banner-anim": "^2.4.5",
