--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
       "prettier --write"
     ],
     "*.ts?(x)": [
-      "prettier --parser=typescript --write"
+      "prettier --parser=typescript --write",
+      "eslint --fix --ext"
     ]
   },
   "dependencies": {
+    "@ant-design/pro-form": "^1.21.5",
     "@ant-design/pro-layout": "^6.5.0",
+    "@ant-design/pro-table": "^2.34.5",
     "@umijs/preset-react": "1.x",
     "braft-editor": "^2.3.9",
     "lib-flexible": "^0.3.2",
